force-app/main/default/objects/HI_Fulfillment_Event__c/HI_Fulfillment_Event__c.object-meta.xml
<CustomObject>
    <label>HI Fulfillment Event</label>
    <nameField>
        <displayFormat>HIFEN-{0000000}</displayFormat>
        <label>HI Fulfillment Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HI Fulfillment Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>