force-app/main/default/objects/HI_Fulfillment_Event__c/fields/Event_Info_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Event_Info_Encrypted__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Event Info Encrypted</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>