force-app/main/default/objects/HI_Fulfillment_Event__c/fields/Event_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Sub_Type__c</fullName>
    <externalId>true</externalId>
    <label>Event Sub Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>