force-app/main/default/objects/HI_Fulfillment_Event__c/fields/Ops_Owner__c.field-meta.xml
<CustomField>
    <fullName>Ops_Owner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ops Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>