force-app/main/default/objects/HI_Fulfillment_Event__c/fields/Processed_At__c.field-meta.xml
<CustomField>
    <fullName>Processed_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Processed At</label>
    <type>DateTime</type>
</CustomField>